# gpc-fonts

./: CMakeLists.txt  CMakeProject.cmake  MIT.txt  conanfile.py  rasterizedglyphset.hpp
docs/: log.txt
inc/: CMakeLists.txt  rasterizedglyphset.hpp
include/: CMakeLists.txt  config.cmake.in
include/gpc/fonts/: CharacterRange.hpp  CharacterSet.hpp  GlyphRange.hpp  RasterGlyphCBox.hpp  RasterizedFont.hpp  RasterizedGlyphCBox.hpp  bounding_box.hpp  cereal.hpp  character_range.hpp  character_set.hpp  rasterized_font.hpp  rasterized_glyph_cbox.hpp  store.hpp
tests/: CMakeLists.txt  test_CharacterSet.cpp  test_fonts.cpp  test_rasterizedglyphset.cpp
testsuite/: CMakeLists.txt  test.cpp
